<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123456"
    android:orientation="vertical"
     android:gravity="center_horizontal"
    tools:context=".signup">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        app:srcCompat="@drawable/logo"></ImageView>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm" />
    <Button
        android:id="@+id/edittext_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/login"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textview_signup"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/not_registered"
            android:textColor="#FFFFFF">Ir a la pantalla de ingreso.
        </TextView>
    </LinearLayout>


</LinearLayout>